<resources>
    <string name="app_name">TestPipeLine</string>
    <string name="copyright">Copyright Think-It 2022</string>
    <string name="login_txt">Login to your \nAccount</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_hint_pwd">Password</string>
    <string name="txt_hint_confirm_pwd">Confirm Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_Register">Register</string>
    <string name="txt_navigate_to_register">You dont have an account? Register here</string>
    <string name="txt_navigate_to_login">Already registred?Login now</string>
    <string name="register_txt">Create your \nAccount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>


</resources>